# file-crypto

./: .gitignore  .travis.yml  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  appveyor.yml
src/: crypto.rs  ctrl.rs  file.rs  lib.rs  main.rs  meta.rs
tests/: bench.rs  integration_test.rs
